fixed uneven footer

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -6,6 +6,6 @@ footer {
 
 @media screen and (min-width: $mobile-width) and (max-width: $tablet-width) {
 	footer {
-		margin-bottom: 5rem
+		padding-bottom: 6rem;
 	}
 }
